--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
     <div class="row text-center">
       <div class="col-md-12">
         <h1>Day One HW</h1>
-        <h3>Minimum Requirements:</h3>
-        <h1>Added some stuff</h1>
+        <h3>Why I'm Taking Mobile Friendly Websites</h3>
         <ul>
-          <li>Replace my info with yours (you may delete these instructions)</li>
-          <li>Save and push to your branch</li>
-          <li>Open pull request</li>
-          <li>You may merge and delete your branch when you get the thumbs up</li>
-          <li>BONUS: You may style however you'd like</li>
+          <li>to learn css frameworks,</li>
+          <li>like bootstrap</li>
+          <li>and maybe semantic ui.</li>
+          <li>I want to learn best practice for using photoshop for web dev purposes</li>
+          <li>I want to learn css animations</li>
+          <li>I want to learn more about styling in general so I can stylize like a pro</li>
         </ul>
       </div>
     </div>
